# ansible-role-tripleo-overcloud

./: deploy.sh  groups  project.config  setup.cfg
defaults/: main.yml
files/hardware_environments/virt/network_configs/single_nic_vlans_ipv4/: single_nic_vlans_ipv4.yml
playbooks/: provision.yml  tripleo.yml
tasks/: create-scripts.yml  deploy-overcloud.yml  main.yml  post-deploy.yml  pre-deploy.yml  setup-heat-templates.yml
templates/: controller-net-config.sh.j2  overcloud-deploy.sh.j2
