[metadata]
name = ansible-tripleo-ci
summary = ansible-tripleo-ci - Set of Ansible Roles and Playbooks for Tripleo CI
description-file =
    README.md
author = RDO-CI Team
author-email = rdo-ci@redhat.com
home-page = https://github.com/redhat-openstack/ansible-tripleo-ci
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-tripleo-ci = ansible.cfg
    usr/local/share/ansible-tripleo-ci/playbooks = playbooks/*
    usr/local/share/ansible-tripleo-ci/jenkins = jenkins/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
